# env-grep

./: .env.example  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
contributing/: index.html
docs/: contributing.md  index.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
src/env_grep/: checker.py  main.py
src/env_guard/: main.py  scanner.py
tests/: test_checker.py  test_main.py  test_scanner.py
usage/: index.html
